# AiRefCheck

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/nlp/: pyproject.toml
apps/nlp/app/: main.py
apps/nlp/app/api/: routes.py
apps/nlp/app/detectors/: fabrication_detector.py  style_detector.py
apps/nlp/app/models/: types.py
apps/nlp/app/parsers/: bibliography_detector.py  reference_parser.py  reference_splitter.py  turkish_name_handler.py
apps/nlp/app/parsers/patterns/: ama_acs_cse_asa_apsa.py  apa.py  chicago.py  harvard.py  ieee.py  mla.py  vancouver.py
apps/nlp/app/utils/: fuzzy_matcher.py  text_cleaner.py
apps/nlp/tests/: conftest.py  test_apa_parser.py  test_api.py  test_chicago_parser.py  test_fabrication_detector.py  test_harvard_parser.py  test_ieee_parser.py  test_mla_parser.py  test_other_parsers.py  test_reference_parser.py  test_style_detector.py  test_turkish_name_handler.py  test_vancouver_parser.py
apps/nlp/tests/fixtures/references/apa7/: book.txt  book_chapter.txt  doi_included.txt  journal_article.txt  multi_author.txt  thesis.txt  turkish_authors.txt  web_page.txt
apps/web/: .env.example  next.config.mjs  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
docker/: Dockerfile.api  Dockerfile.nlp  Dockerfile.web  docker-compose.yml
docs/: API_KEYS_GUIDE.md  ARCHITECTURE.md  CITATION_STYLES.md  DATABASE_SCHEMA.md  PRD.md  TECH_STACK.md  VISION.md
docs/tasks/: COORDINATION.md  TASK-BIGPICKLE-DESKTOP.md  TASK-DEEPSEEK-API.md  TASK-KIMI-NLP.md  (+4 more)
prisma/: schema.prisma  seed.ts
(+70 files in other folders)
