# Python NLP Service
[tool.poetry]
name = "airefcheck-nlp"
version = "0.1.0"
description = "AiRefCheck NLP Service - Reference parsing and citation detection"
authors = ["AiRefCheck Team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.0"
spacy = "^3.7.0"
PyMuPDF = "^1.24.0"
python-docx = "^1.1.0"
pybtex = "^0.24.0"
rapidfuzz = "^3.9.0"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.0"
structlog = "^24.4.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
